[tool.poetry]
name = "rlt-test"
version = "0.1.0"
description = ""
authors = ["Павел Крикуненко <pavelkrikunenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
